--- a/_posts/2020-02-09-webcrawling2/bibliography.bib
+++ b/_posts/2020-02-09-webcrawling2/bibliography.bib
@@ -24,3 +24,5 @@ Flow Diagrams},
     note = {R package version 1.6.4},
     url = {https://CRAN.R-project.org/package=diagram},
   }
+  
+@book{hofstad_2016, place={Cambridge}, series={Cambridge Series in Statistical and Probabilistic Mathematics}, title={Random Graphs and Complex Networks}, volume={1}, DOI={10.1017/9781316779422}, publisher={Cambridge University Press}, author={Hofstad, Remco van der}, year={2016}, collection={Cambridge Series in Statistical and Probabilistic Mathematics}}
